tests/paczka1/fuzzy1/43757497.err
Error in line 1: 9Yl4RiGaf A271 91,6
Error in line 6: AhRnM A271 71,5
Error in line 7: AhRnM A785 23,7
Error in line 19: J0e1 S]05 25,0
Error in line 8: AhRnM A755 5,8
Error in line 27: EDZdmvW8m S905 96,6
Error in line 17: J0e1 S905 100,0
